# Bharat-TTS-Studio

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app_controller.py  event_bus.py  main.py
app/audio/: __init__.py  audio_postprocess.py
app/core/: audio_manager.py  cache_manager.py  config_manager.py  exceptions.py  history_manager.py  logger.py  system_monitor.py
app/engine/: __init__.py  comparison_engine.py  inference_engine.py
app/gui/: __init__.py  main_window.py  workers.py
app/gui/dialogs/: __init__.py  error_dialog.py  first_run_wizard.py
app/gui/pages/: __init__.py  comparison_page.py  history_page.py  home_page.py  settings_page.py
app/gui/panels/: __init__.py  log_console_panel.py
app/gui/theme/: __init__.py  dark_theme.qss  light_theme.qss  theme_manager.py
app/gui/widgets/: __init__.py  comparison_grid_widget.py
app/inference/: __init__.py
app/models/: __init__.py  base_adapter.py  model_downloader.py  model_manager.py  model_registry.py
app/models/adapters/: __init__.py  bark_adapter.py  edge_tts_adapter.py  gtts_adapter.py  mms_tts_adapter.py  silero_adapter.py
app/preprocessing/: __init__.py  pipeline.py
app/preprocessing/lang_rules/: __init__.py  hi_rules.py  ta_rules.py  te_rules.py
app/utils/: i18n_labels.py
config/: languages_catalog.yaml  models_catalog.yaml  settings.default.yaml
scripts/: setup_env.py  verify_models.py
tests/: test_phase1_smoke.py
tests/fixtures/: __init__.py
tests/gui/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+23 files in other folders)
